# semantic-search-next

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  INFRASTRUCTURE.md  IN_PROGRESS.md  README.md  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  eval_dataset.json  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20241205_0001_initial_schema.py  20241206_0002_add_settings_table.py  20241209_0001_add_evaluation_tables.py  20251208_0047_d1f4fac42d78_add_ai_answer_and_context_window_.py  20251210_0511_07c37e7c0d1a_add_search_config_fields_to_evaluation_.py  20251210_0521_085077e7c5fc_add_eval_judge_provider_to_settings.py  20251210_0621_1ee42f601d51_add_embedding_model_and_answer_model_to_.py  20251210_1847_4b1725759444_add_eval_judge_model_to_settings.py  20251210_1852_fa5b076e9557_add_answer_provider_model_to_settings.py  20251210_2200_add_answer_style_to_settings.py  20260212_1200_add_is_trusted_to_collections.py
backend/app/: __init__.py  config.py  main 2.py  main.py
backend/app/api/: deps.py  middleware.py  schemas.py
backend/app/api/v1/: __init__.py  analytics.py  collections.py  documents.py  evals.py  health.py  (+3 more)
backend/app/core/: __init__.py  ab_testing.py  answer_verifier.py  bm25_retriever.py  chroma_filters.py  collection_manager.py  conversation.py  document_manager.py  document_processor.py  embeddings.py  exceptions.py  hybrid_retriever.py  injection_detector.py  input_sanitizer.py  llm_factory.py  qa_chain.py  reranker.py  search_manager.py  storage.py  vector_store.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/models/: __init__.py  collection.py  document.py  errors.py  responses.py  search.py
backend/app/prompts/: __init__.py  evaluation.yaml  qa.yaml  verification.yaml
backend/app/services/: __init__.py  evaluation.py  retrieval.py
backend/db/: init.sql
backend/docs/: ARCHITECTURE.md
backend/tests/: test_injection_detector.py  test_input_sanitizer.py  test_llm_judge_schemas.py  test_output_parser.py  test_trust_boundaries.py
(+116 files in other folders)
