[project]
name = "semantic-search-api"
version = "0.1.0"
description = "FastAPI backend for Semantic Search application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # FastAPI
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Pydantic
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Vector Store & Embeddings
    "chromadb>=0.4.22",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-chroma>=0.1.0",

    # Document Processing
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",

    # Reranking
    "sentence-transformers>=2.2.2",
    "cohere>=4.40",

    # BM25
    "rank-bm25>=0.2.2",

    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument
    "B904",  # raise from - too noisy for existing code
    "B905",  # zip strict - Python 3.10+ only semantic
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py (re-exports)
"app/main.py" = ["E402"]  # Imports after app setup are intentional

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
